--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
 
 <body>
 
-
-	<header>
+	<header class="head2">
+		<div class="header">
+		<a class ="header" href="#Top">Top</a>   
+		<a class ="header" href="#Abouts">Abouts</a>   
+		<a class ="header" href="#Member">Member</a>
+		</div>
+	</header>
+	<a id="Top"></a>
+	<header class="head1">
 		<figure>
 			<img src="EID.png" alt="">
 		</figure>
 	</header>
+	<a id="Abouts"></a>
+	
+		<div class="group">
 		<h2>
 		主な内容
 		</h2>
@@ -22,46 +32,47 @@
 		</p>
 	
 		<h2>
-		研究テーマ
+		主な研究テーマ
 		</h2>
-		<li>
-		住宅内の脳波特性把握に関する基礎的研究
-		</li>
-		<li>
+
+		<li class="kind">
 		WEB閲覧時の視覚行動特性に関する基礎的研究
 		</li>
-		<li>
+		<li class="kind">
 		VRを利用した景観映像閲覧時の視覚行動特性把握に関する基礎的研究
 		</li>
-		<li>
+		<li class="kind">
 		獣害被害の情報共有手法に関する基礎的研究
 		</li>
-		<li>
+		<li class="kind">
 		玩具の素材感が持つ人への生理的・心理的影響に関する基礎的研究
 		</li>
-		<li>
+		<li class="kind">
 		読図をともなう地下街路探索時の認知特性に関する研究
 		</li>
-		<li>
+		<li class="kind">
 		大型デジタルサイネージ視認時の視覚行動特性に関する研究
 		</li>
-		<li>
+		<li class="kind">
 		少年野球選手の視覚行動特性に関する基礎的研究
 		</li>
+			
 		<h2>
 		この研究がかなえる未来
 		</h2>
 		<p class="body1">
 		人間の多様な行動について行動科学的視点ならびに神経科学的観点から総合的に把握することにより、人間の行動をサポートするようなインタラクティブなプロダクトのデザインを目指しています。
 		</p>
-	
+
+			
+		<a id="Member"></a>
 		<h1 class="idList">
 			<h2>
 			メンバー
 			</h2>
 		
 			<h3 class="kindof">
-			先生
+			教員
 			</h3>
 		<ul class="idList">
 				<li class="a">
@@ -81,7 +92,7 @@
 
 			
 		<h3 class="kindof">
-		生徒
+		学部生
 		</h3>
 		
 		<ul class="idList">
@@ -171,6 +182,6 @@
 				</li>
 		</ul>
 	</h1>
-
+	</div>
 </body>
 </html>
