--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header class="head2">
 		<div class="header">
 		<a class ="header" href="#Top">Top</a>   
-		<a class ="header" href="#Abouts">Abouts</a>   
+		<a class ="header" href="#About us">About us</a>   
 		<a class ="header" href="#Member">Member</a>
 		</div>
 	</header>
@@ -21,9 +21,12 @@
 			<img src="EID.png" alt="">
 		</figure>
 	</header>
-	<a id="Abouts"></a>
+	<a id="About us"></a>
 	
 		<div class="group">
+		<h3 class="kindof">
+		About us
+		</h3>
 		<h2>
 		主な内容
 		</h2>
@@ -67,11 +70,12 @@
 			
 		<a id="Member"></a>
 		<h1 class="idList">
-			<h2>
-			メンバー
-			</h2>
-		
+			
 			<h3 class="kindof">
+			Member
+			</h3>
+		
+			<h3 class="line">
 			教員
 			</h3>
 		<ul class="idList">
@@ -91,7 +95,7 @@
 			
 
 			
-		<h3 class="kindof">
+		<h3 class="line">
 		学部生
 		</h3>
 		
