--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link href="Untitled-3.css" rel="stylesheet" type="text/css">
 <head>
 <meta charset="UTF-8">
-<title></title>
+<title>EID Lab. 1</title>
 </head>
 
 <body>
