--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <link href="Untitled-3.css" rel="stylesheet" type="text/css">
 <head>
-<meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html charset=UTF-8">
 <title>EID Lab. 1</title>
 </head>
 
