--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					</figure>
 						<div class="profileText">
 							<p class="Jname">根来拓利</p>
-							<p class="Ename">Takutoshi NEGORO</p>
+							<p class="Ename">Takuto NEGORO</p>
 						</div>
 					</a>
 				</li>
